Todo list with remote webservice sample working

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,5 +6,8 @@
 		"emitDecoratorMetadata": true,
 		"experimentalDecorators": true,
 		"noImplicitAny": true
-	}
+	},
+	"exclude" : [
+		"node_modules"
+	]
 }
