--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "license": "ISC",
   "devDependencies": {
     "gulp": "^3.9.0",
-    "gulp-typescript": "^2.9.0",
-    "gulp-sourcemaps": "^1.5.2",
-    "gulp-tslint": "^3.3.0-beta",
+    "gulp-typescript": "^2.9.2",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-tslint": "^3.3.0",
     "typescript": "^1.6.2",
     "path": "^0.12.7",
     "gulp-inject": "^3.0.0",
@@ -21,8 +21,8 @@
   },
   "dependencies": {
     "jquery": "^2.1.4",
-    "angular2": "^2.0.0-alpha.39",
-    "systemjs": "^0.19.3",
+    "angular2": "^2.0.0-alpha.40",
+    "systemjs": "^0.19.4",
     "bootstrap": "^3.3.5"
   }
 }
